package EchoNote.Arpit;

public class UnsupportedExportException extends RuntimeException {

    public UnsupportedExportException(String message) {
        super(message);
    }

    public UnsupportedExportException(String message, Throwable cause) {
        super(message, cause);
    }
}
